--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libzonemaster-perl (1.0.11-2~unstable+1) unstable; urgency=low
+
+  * Fix missing dependency.
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Tue, 05 Jan 2016 09:48:51 +0100
+
 libzonemaster-perl (1.0.11-1~unstable+1) unstable; urgency=low
 
   * Release 1.0.11.
