--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libzonemaster-perl (1.0.11-3~unstable+1) unstable; urgency=low
+
+  * Detect if built on launchpad (user buildd), if so disable network in tests.
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Tue, 05 Jan 2016 11:17:21 +0100
+
 libzonemaster-perl (1.0.11-2~unstable+1) unstable; urgency=low
 
   * Fix missing dependency.
