--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libzonemaster-perl (1.0.13-2~unstable+1) unstable; urgency=low
+
+  * Create locale file in configure step to ensure that Module::Install gets them.
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Tue, 02 Feb 2016 15:46:21 +0100
+
 libzonemaster-perl (1.0.13-1~unstable+1) unstable; urgency=low
 
   * Release 1.0.13 and generate locale.
