--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libzonemaster-perl (1.0.14-1~unstable+1) unstable; urgency=low
+
+  * Release 1.0.14.
+
+ -- Jerry Lundström <lundstrom.jerry@gmail.com>  Mon, 27 Jun 2016 10:55:54 +0200
+
 libzonemaster-perl (1.0.13-2~unstable+1) unstable; urgency=low
 
   * Create locale file in configure step to ensure that Module::Install gets them.
